Removes version.h and defines.h from source tree if present

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,11 +59,19 @@ if(timemory_MAIN_PROJECT)
     set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON CACHE BOOL "Append directories in the linker search path")
     # set(CMAKE_POSITION_INDEPENDENT_CODE ON CACHE BOOL "Build position independent code")
     mark_as_advanced(CMAKE_ENABLE_EXPORTS)
+    foreach(_FILE version.h defines.h)
+        if(EXISTS ${PROJECT_SOURCE_DIR}/source/timemory/${_FILE})
+            file(REMOVE ${PROJECT_SOURCE_DIR}/source/timemory/${_FILE})
+        endif()
+    endforeach()
 else()
     set(CMAKE_ENABLE_EXPORTS ON)
     set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)
     # set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 endif()
+
+set(TIMEMORY_GIT_DESCRIBE "unknown")
+set(TIMEMORY_GIT_REVISION "unknown")
 
 find_package(Git QUIET)
 if(Git_FOUND)
