memory leak fixes + new C example

--- a/examples/ex-c/CMakeLists.txt
+++ b/examples/ex-c/CMakeLists.txt
@@ -7,12 +7,17 @@ endif()
 
 project(timemory-C-Example LANGUAGES C)
 
-set(EXE_NAME ex_c_timing)
-set(COMPONENTS c compile-options analysis-tools)
-
 set(timemory_FIND_COMPONENTS_INTERFACE timemory::c-example)
-find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
+find_package(timemory REQUIRED
+    COMPONENTS          c
+    OPTIONAL_COMPONENTS compile-options analysis-tools)
 
+set(EXE_NAME ex_c)
+add_executable(${EXE_NAME} ${EXE_NAME}.c)
+target_link_libraries(${EXE_NAME} timemory::c-example)
+install(TARGETS ${EXE_NAME} DESTINATION bin OPTIONAL)
+
+set(EXE_NAME ex_c_timing)
 add_executable(${EXE_NAME} ${EXE_NAME}.c)
 target_link_libraries(${EXE_NAME} timemory::c-example)
 install(TARGETS ${EXE_NAME} DESTINATION bin OPTIONAL)
