--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -19,7 +19,7 @@ jobs:
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON'
           - CC: clang-8
             CXX: clang++-8
-            PYTHON_VERSION: '3.7'
+            PYTHON_VERSION: '3.6'
             BUILD_TYPE: 'RelWithDebInfo'
             PACKAGES: 'clang-8 build-essential ccache'
             BUILD_ARGS: '--minimal --build-libs shared static --stats --tools kokkos-config timem --cxx-standard=14'
@@ -27,7 +27,7 @@ jobs:
           - CC: gcc-6
             CXX: g++-6
             FC: gfortran-6
-            PYTHON_VERSION: '3.8'
+            PYTHON_VERSION: '3.6'
             BUILD_TYPE: 'RelWithDebInfo'
             PACKAGES: 'gcc-6 g++-6 gfortran-6 build-essential libtbb-dev ccache'
             BUILD_ARGS: '--minimal --build-libs shared --python --stats --cxx-standard=14'
@@ -35,7 +35,7 @@ jobs:
           - CC: gcc-7
             CXX: g++-7
             FC: gfortran-7
-            PYTHON_VERSION: '3.9'
+            PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'Debug'
             PACKAGES: 'gcc-7 g++-7 gfortran-7 build-essential libmpich-dev mpich libtbb-dev libpapi-dev papi-tools lcov ccache'
             BUILD_ARGS: '--minimal --build-libs shared --mpi --papi --gotcha --tools mpip --stats --cxx-standard=17 --coverage'
@@ -43,7 +43,7 @@ jobs:
           - CC: gcc-8
             CXX: g++-8
             FC: gfortran-8
-            PYTHON_VERSION: 'pypy-3.6'
+            PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'Release'
             PACKAGES: 'gcc-8 g++-8 gfortran-8 build-essential libopenmpi-dev openmpi-bin openmpi-common libfabric-dev ccache'
             BUILD_ARGS: '--minimal --build-libs shared --mpi --stats --tools compiler --cxx-standard=17'
@@ -51,7 +51,7 @@ jobs:
           - CC: gcc-9
             CXX: g++-9
             FC: gfortran-9
-            PYTHON_VERSION: 'pypy-3.7'
+            PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'MinSizeRel'
             PACKAGES: 'gcc-9 g++-9 gfortran-9 build-essential ccache'
             BUILD_ARGS: '--minimal --build-libs shared --stats --python --cxx-standard=17'
@@ -76,14 +76,9 @@ jobs:
           bash miniconda.sh -b -p ${HOME}/miniconda
           export PATH="${HOME}/miniconda/bin:${PATH}"
           conda config --set always_yes yes --set changeps1 no
-          conda create -c conda-forge -c defaults -n pyctest python=3.7 pyctest
+          conda create -c conda-forge -c defaults -n pyctest python=${{ matrix.PYTHON_VERSION }} pyctest
           source activate
           conda activate pyctest
-
-      - name: Set up Python ${{ matrix.PYTHON_VERSION }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.PYTHON_VERSION }}
 
       - name: Build and Test
         run: |
