--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -17,8 +17,8 @@ set(CMAKE_UNITY_BUILD ${TIMEMORY_UNITY_BUILD})
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
 set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME python)
-if(NOT NCPU GREATER 2)
-  set(CMAKE_UNITY_BUILD_BATCH_SIZE 16)
+if(NOT ${NCPU} GREATER 2 OR "$ENV{CI}" STREQUAL "true")
+  set(CMAKE_UNITY_BUILD OFF)
 else()
   set(CMAKE_UNITY_BUILD_BATCH_SIZE 4)
 endif()
@@ -26,10 +26,6 @@ endif()
 if(TIMEMORY_BUILD_PYTHON_HIDDEN)
     set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
     set(_visibility timemory::timemory-hidden-visibility)
-endif()
-
-if("$ENV{USER}" STREQUAL "travis" AND "$ENV{TRAVIS}" STREQUAL "true")
-    set(CMAKE_UNITY_BUILD OFF)
 endif()
 
 ##########################################################################################
