--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -106,6 +106,9 @@ jobs:
       - name: Test Python
         working-directory: ${{github.workspace}}/build-timemory/Linux
         run: |
+          export PATH="${HOME}/miniconda/bin:${PATH}"
+          source activate
+          conda activate pyctest
           if [ -f "tests/test-python-install-import.cmake" ]; then
             cmake -P tests/test-python-install-import.cmake;
             PYTHONPATH=. $(which pytest);
